--- a/printer.cfg
+++ b/printer.cfg
@@ -186,7 +186,8 @@ interpolate: true
 #run_current: 0.3 # for LDO 36STH17-1004AHG
 ## For LDO LDO 36STH20-1004AHG 1A 1.8° 
 # run_current: 0.6 # for LDO 36STH20-1004AHG
-run_current: 0.6 #**
+run_current: 0.85 #**
+hold_current: 0.100
 sense_resistor: 0.11 #**
 stealthchop_threshold: 0                                            # Set to 0 for spreadcycle, avoid using stealthchop on extruder
 
