--- a/printer.cfg
+++ b/printer.cfg
@@ -1,4 +1,5 @@
 [include mainsail.cfg]
+
 # This file contains common pin mappings for the BIGTREETECH SKR Pico V1.0
 # To use this config, the firmware should be compiled for the RP2040 with
 # USB communication.
@@ -27,6 +28,25 @@
 # serial: /dev/serial/by-id/usb-Klipper_rp2040_REPLACE_WITH_YOUR_VALUE
 serial: /dev/serial0 											# for UART connection
 restart_method: command
+
+
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
+[adxl345]
+cs_pin: rpi:None
+
+[resonance_tester]
+accel_chip: adxl345
+probe_points:
+    60, 60, 20
+
+[input_shaper]
+shaper_freq_x: 77.4
+shaper_type_x: zv
+shaper_freq_y: 55.6
+shaper_type_y: mzv
+
 
 
 [temperature_sensor mcu_temp]
@@ -163,11 +183,12 @@ filament_diameter: 1.750
 sensor_type: Generic 3950
 sensor_pin: gpio27
 control: pid                                                        # Do PID calibration after initial checks
-pid_Kp: 36.818
-pid_Ki: 11.157
-pid_Kd: 30.375
+pid_Kp: 41.042
+pid_Ki: 8.550
+pid_Kd: 49.250
+
 min_temp: 0
-max_temp: 270
+max_temp: 285
 min_extrude_temp: 170
 max_extrude_only_distance: 500
 max_extrude_only_velocity: 120
@@ -346,9 +367,9 @@ initial_BLUE: 0.0
 gcode:
     G92 E0 ;Reset Extruder 
     M83
-    G1 Z0.4 X115.5 Y100 F4000.0 ;  Move to start position
+    G1 Z0.4 X117 Y100 F4000.0 ;  Move to start position
     G1 Y20.0 F800.0 E5 ;  Draw the first line
-    G1 X114.5 F800.0 ;  Move to side a little
+    G1 X116 F800.0 ;  Move to side a little
     G1 Y50 F600 E8;  Draw the second line
     M82
     
@@ -483,3 +504,4 @@ gcode:
 #*#
 #*# [stepper_z]
 #*# position_endstop = 114.975
+#*#
